...
    
    // MARK: - UI component
    
    let backButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setImage(Asset.Image.icBack.image, for: .normal)
        button.accessibilityIdentifier = "button_complete_detail"
        return button
    }()
    
    private let topLabel: UILabel = {
        let label = UILabel()
        label.font = ResourceManager.instance.getFont(size: 20)
...
        return label
    }()
    
    let deleteButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setImage(Asset.Image.icTrash.image, for: .normal)
        button.accessibilityIdentifier = "button_delete_detail"
        return button
    }()
    
    let completeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setTitle(L10n.complete, for: .normal)
...
        textView.textColor = Asset.Color.gray1.color
        textView.layer.cornerRadius = 20
        textView.layer.borderWidth = 2
        textView.layer.borderColor = ResourceManager.instance.getMainColor().cgColor
        textView.isScrollEnabled = false
        textView.textContainerInset = UIEdgeInsets(top: 10, left: 5, bottom: 10, right: 5)
        textView.accessibilityIdentifier = "textView_title_detail"
        return textView
    }()
    
    lazy var contentsTextView: UITextView = {
        let textView = UITextView()
        textView.backgroundColor = .clear
...
        textView.textColor = Asset.Color.gray1.color
        textView.layer.cornerRadius = 20
        textView.layer.borderWidth = 2
        textView.layer.borderColor = ResourceManager.instance.getMainColor().cgColor
        textView.isScrollEnabled = true
        textView.textContainerInset = UIEdgeInsets(top: 10, left: 5, bottom: 10, right: 5)
        textView.accessibilityIdentifier = "textView_contents_detail"
        textView.inputAccessoryView = toolView
        return textView
    }()
    
    lazy var toolView: UIView = {
        let view = UIView()
...
