...
    
    var detailButton: FloatingButton = {
        let button = FloatingButton()
        button.setButtonImage(img: Asset.Image.icDetailWrite.image,
                              color: ResourceManager.instance.getMainColor())
        button.setButtonBackgroundColor(.white)
        button.button.accessibilityIdentifier = "button_main_floating_detail"
        return button
    }()
    
    var simpleButton: FloatingButton = {
        let button = FloatingButton()
        button.setButtonImage(img: Asset.Image.icSimpleWrite.image,
                              color: ResourceManager.instance.getMainColor())
        button.setButtonBackgroundColor(.white)
        button.button.accessibilityIdentifier = "button_main_floating_simple"
        return button
    }()
    
    var detailLabel: PaddingLabel = {
        let label = PaddingLabel()
        label.font = ResourceManager.instance.getFont(size: 13)
...
