...
        let tableView = UITableView()
        tableView.backgroundColor = .clear
        tableView.separatorColor = .clear
        tableView.separatorStyle = .none
        tableView.register(DetailDiaryTVCell.self, forCellReuseIdentifier: DetailDiaryTVCell.id)
        tableView.register(SimpleDiaryTVCell.self, forCellReuseIdentifier: SimpleDiaryTVCell.id)
        tableView.accessibilityIdentifier = "tableView_main"
        return tableView
    }()
    
    let emptyView = UIView()
    
    let floatingButton: FloatingButton = {
        let button = FloatingButton()
        button.setButtonImage(img: Asset.Image.icPencil.image,
                              color: Asset.Color.cleanWhite.color)
        button.setButtonBackgroundColor(ResourceManager.instance.getMainColor())
        button.button.accessibilityIdentifier = "button_main_floating"
        return button
    }()
    
    // MARK: - Functions
    
    func setEmptyView(view: UIView) {
...
